--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -4,6 +4,7 @@ guiy = "0.7.26"
 deeperworld = "0.6.85"
 chatty = "0.5.0"
 mobzy = "0.21-SNAPSHOT"
+looty = "0.10-SNAPSHOT"
 protocolburrito = "0.5.38"
 
 
@@ -14,10 +15,11 @@ deeperworld = { module = "com.mineinabyss:deeperworld", version.ref = "deeperwor
 guiy = { module = "com.mineinabyss:guiy-compose", version.ref = "guiy" }
 chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
+looty = { module = "com.mineinabyss:looty", version.ref = "looty" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.3.1"
-minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.3.1"
+minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.4.0"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.2"
