--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-gearyPaper = "0.24-SNAPSHOT"
-guiy = "0.9-SNAPSHOT"
-deeperworld = "0.8-SNAPSHOT"
+gearyPaper = "0.24.1"
+guiy = "0.9.0"
+deeperworld = "0.8.0"
 chatty = "0.6-SNAPSHOT"
 mobzy = "0.21-SNAPSHOT"
 looty = "0.10-SNAPSHOT"
-protocolburrito = "0.5.38"
+protocolburrito = "0.7.0"
 
 
 [libraries]
