add sign edit prevention

--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -2,7 +2,7 @@
 gearyPaper = "0.24.1"
 guiy = "0.9.0"
 deeperworld = "0.8.0"
-chatty = "0.6-SNAPSHOT"
+chatty = "0.6.1"
 mobzy = "0.21-SNAPSHOT"
 looty = "0.10-SNAPSHOT"
 protocolburrito = "0.7.0"
