--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -30,3 +30,4 @@ minecraft-plugin-modelengine = "com.ticxo.modelengine:api:R3.1.7"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.19.4-v2-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.19.4-v2-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.19.3-v2"
+minecraft-plugin-openinv = "com.github.jikoo.OpenInv:openinvapi:4.3.1"
