--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -5,6 +5,7 @@ deeperworld = "0.8.0"
 chatty = "0.6.5"
 mobzy = "0.21-SNAPSHOT"
 looty = "0.10-SNAPSHOT"
+protocolburrito = "0.7.0"
 
 
 [libraries]
@@ -14,6 +15,7 @@ guiy = { module = "com.mineinabyss:guiy-compose", version.ref = "guiy" }
 chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
 looty = { module = "com.mineinabyss:looty", version.ref = "looty" }
+protocolburrito = { module = "com.mineinabyss:protocolburrito", version.ref = "protocolburrito" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
