more work on ManualGrapple

--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -6,6 +6,7 @@ chatty = "0.6.5"
 mobzy = "0.21-SNAPSHOT"
 looty = "0.10-SNAPSHOT"
 protocolburrito = "0.7.0"
+staminaclimb = "0.20"
 
 
 [libraries]
@@ -16,6 +17,7 @@ chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
 looty = { module = "com.mineinabyss:looty", version.ref = "looty" }
 protocolburrito = { module = "com.mineinabyss:protocolburrito", version.ref = "protocolburrito" }
+staminaclimb = { module = "com.mineinabyss:stamina-climb", version.ref = "staminaclimb" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
