--- a/src/main/resources/okiboTravel.yml
+++ b/src/main/resources/okiboTravel.yml
@@ -1,4 +1,4 @@
-costPerKM: 2.0
+costPerKM: 2
 okiboStations:
   - name: GoldenBridge
     location:
@@ -12,19 +12,24 @@ okiboStations:
       z: -571.0
   - name: TowerDistrict
     location:
-      x: 422
-      y: 136
-      z: -345
+      x: 422.0
+      y: 136.0
+      z: -345.0
+  - name: DocksEast
+    location:
+      x: 1010
+      y: 32
+      z: -405
   - name: VillageDistrict
     location:
-      x: 580
-      y: 128
-      z: 130
+      x: 580.0
+      y: 128.0
+      z: 130.0
   - name: CliffDistrict
     location:
-      x: 422
-      y: 128
-      z: 450
+      x: 422.0
+      y: 128.0
+      z: 450.0
   - name: SlumDistrict
     location:
       x: -67.0
@@ -32,9 +37,14 @@ okiboStations:
       z: 647.0
   - name: Orphanage
     location:
-      x: -643
-      y: 145
-      z: 177
+      x: -643.0
+      y: 145.0
+      z: 177.0
+  - name: DocksWest
+    location:
+      x: -985
+      y: 34
+      z: 665
 okiboMaps:
   - station: GoldenBridge
     scale: [2.0, 2.0, 2.0]
@@ -52,38 +62,176 @@ okiboMaps:
       
     hitboxes:
       - destStation: GuildHQ
-        offset: [0.6,3.1,0.0]
+        offset: [0.5,3.6,0.0]
         hitbox:
           width: 0.3
           height: 0.3
       - destStation: TowerDistrict
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
+        offset: [1.0,3.1,0.0]
+      - destStation: DocksEast
+        offset: [1.2,2.7,0.0]
       - destStation: VillageDistrict
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
+        offset: [0.6,2.6,0.0]
       - destStation: CliffDistrict
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
+        offset: [0.1,2.4,0.0]
       - destStation: SlumDistrict
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
+        offset: [-0.9,2.7,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,3.2,0.0]
       - destStation: Orphanage
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
+        offset: [-0.9,3.5,0.0]
+      #- destStation: GoldenBridge
+      #  offset: [-0.4,3.5,0.0]
+      #  hitbox:
+      #    width: 0.3
+      #    height: 0.3
+  - station: GuildHQ
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
+      - destStation: Orphanage
+        offset: [-0.9,3.0,0.0]
       - destStation: GoldenBridge
-        offset: [0.6,3.1,0.0]
-        hitbox:
-          width: 0.3
-          height: 0.3
-
+        offset: [-0.4,3.0,0.0]
+  - station: TowerDistrict
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
+      - destStation: Orphanage
+        offset: [-0.9,3.5,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+  - station: DocksEast
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
+      - destStation: Orphanage
+        offset: [-0.9,3.5,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+  - station: VillageDistrict
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
+      - destStation: Orphanage
+        offset: [-0.9,3.5,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+  - station: CliffDistrict
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
+      - destStation: Orphanage
+        offset: [-0.9,3.5,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+  - station: SlumDistrict
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: Orphanage
+        offset: [-0.9,3.5,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+  - station: DocksWest
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: Orphanage
+        offset: [-0.9,3.0,0.0]
+      - destStation: GoldenBridge
+        offset: [-0.4,3.0,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+  - station: Orphanage
+    scale: [2.0, 2.0, 2.0]
+    hitboxes:
+      - destStation: GoldenBridge
+        offset: [-0.4,3.5,0.0]
+      - destStation: GuildHQ
+        offset: [0.5,3.1,0.0]
+      - destStation: TowerDistrict
+        offset: [1.0,2.6,0.0]
+      - destStation: DocksEast
+        offset: [1.7,2.0,0.0]
+      - destStation: VillageDistrict
+        offset: [0.6,2.1,0.0]
+      - destStation: CliffDistrict
+        offset: [0.1,1.9,0.0]
+      - destStation: SlumDistrict
+        offset: [-0.9,2.3,0.0]
+      - destStation: DocksWest
+        offset: [-1.8,2.7,0.0]
