placeholder and command tweaks

--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -21,7 +21,7 @@ minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.5.0"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.2"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.3"
-minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:0.3.0-SNAPSHOT"
+minecraft-plugin-happyhud = "com.happyhud:api:1.0.4"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
 minecraft-plugin-modelengine = "com.ticxo.modelengine:api:B4.0.0"
