--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -23,7 +23,7 @@ minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.6.4"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.2"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.4"
-minecraft-plugin-happyhud = "com.happyhud:api:1.0.6"
+minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:1.0.6-RELEASE"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.1-v2-SNAPSHOT"
