--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -2,11 +2,11 @@
 gearyPaper = "0.25-SNAPSHOT"
 guiy = "0.9.0"
 deeperworld = "0.8.0"
-chatty = "0.6.5"
+chatty = "0.6.6"
 mobzy = "0.21-SNAPSHOT"
-looty = "0.10-SNAPSHOT"
+looty = "0.11.0"
 protocolburrito = "0.7.0"
-eternalfortune = "0.2.0"
+eternalfortune = "0.2.2"
 
 
 [libraries]
