Fix dependency on luckperms, add correct dependencies for some features that need them

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -65,3 +65,7 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    LuckPerms:
+      required: false
+      load: BEFORE
+      join-classpath: true
