--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -7,6 +7,7 @@ mobzy = "0.21-SNAPSHOT"
 looty = "0.11.0"
 protocolburrito = "0.7.0"
 eternalfortune = "0.2.2"
+packy = "0.2-SNAPSHOT"
 
 
 [libraries]
@@ -18,6 +19,7 @@ mobzy = { module = "com.mineinabyss:mobzy", version.ref = "mobzy" }
 looty = { module = "com.mineinabyss:looty", version.ref = "looty" }
 protocolburrito = { module = "com.mineinabyss:protocolburrito", version.ref = "protocolburrito" }
 eternalfortune = { module = "com.mineinabyss:eternalfortune", version.ref = "eternalfortune" }
+packy = { module = "com.mineinabyss:Packy", version.ref = "packy" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
@@ -25,7 +27,7 @@ minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.6.4"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.2"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.4"
-minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:1.0.6-RELEASE"
+minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:1.0.7-RELEASE"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.1-v2-SNAPSHOT"
