feat: custom advancements feature

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -81,3 +81,7 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    CustomAdvancementsAPI:
+      required: false
+      load: BEFORE
+      join-classpath: true
