--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -34,3 +34,4 @@ minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.1-v2-SN
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.20.1-v2-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.20.1-v1"
 minecraft-plugin-openinv = "com.github.jikoo.OpenInv:openinvapi:4.3.1"
+minecraft-plugin-crazyadvancements = "eu.endercentral.crazy_advancements:CrazyAdvancementsAPI:2.1.15"
