--- a/src/main/resources/okiboTravel.yml
+++ b/src/main/resources/okiboTravel.yml
@@ -47,7 +47,10 @@ okiboStations:
       z: 665
 okiboMaps:
   - station: GoldenBridge
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     font: orth_map
     text: |
       
@@ -62,176 +65,413 @@ okiboMaps:
       
     hitboxes:
       - destStation: GuildHQ
-        offset: [0.5,3.6,0.0]
+        offset:
+          x: 0.5
+          y: 3.6
+          z: 0.0
         hitbox:
           width: 0.3
           height: 0.3
       - destStation: TowerDistrict
-        offset: [1.0,3.1,0.0]
+        offset:
+          x: 1.0
+          y: 3.1
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.2,2.7,0.0]
+        offset:
+          x: 1.2
+          y: 2.7
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.6,0.0]
+        offset:
+          x: 0.6
+          y: 2.6
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,2.4,0.0]
+        offset:
+          x: 0.1
+          y: 2.4
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.7,0.0]
+        offset:
+          x: -0.9
+          y: 2.7
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,3.2,0.0]
+        offset:
+          x: -1.8
+          y: 3.2
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       #- destStation: GoldenBridge
       #  offset: [-0.4,3.5,0.0]
       #  hitbox:
       #    width: 0.3
       #    height: 0.3
   - station: GuildHQ
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.0,0.0]
+        offset:
+          x: -0.9
+          y: 3.0
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.0,0.0]
+        offset:
+          x: -0.4
+          y: 3.0
+          z: 0.0
   - station: TowerDistrict
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
   - station: DocksEast
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
   - station: VillageDistrict
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
   - station: CliffDistrict
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
   - station: SlumDistrict
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: Orphanage
-        offset: [-0.9,3.5,0.0]
+        offset:
+          x: -0.9
+          y: 3.5
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
   - station: DocksWest
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: Orphanage
-        offset: [-0.9,3.0,0.0]
+        offset:
+          x: -0.9
+          y: 3.0
+          z: 0.0
       - destStation: GoldenBridge
-        offset: [-0.4,3.0,0.0]
+        offset:
+          x: -0.4
+          y: 3.0
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
   - station: Orphanage
-    scale: [2.0, 2.0, 2.0]
+    scale:
+      x: 2.0
+      y:  2.0
+      z:  2.0
     hitboxes:
       - destStation: GoldenBridge
-        offset: [-0.4,3.5,0.0]
+        offset:
+          x: -0.4
+          y: 3.5
+          z: 0.0
       - destStation: GuildHQ
-        offset: [0.5,3.1,0.0]
+        offset:
+          x: 0.5
+          y: 3.1
+          z: 0.0
       - destStation: TowerDistrict
-        offset: [1.0,2.6,0.0]
+        offset:
+          x: 1.0
+          y: 2.6
+          z: 0.0
       - destStation: DocksEast
-        offset: [1.7,2.0,0.0]
+        offset:
+          x: 1.7
+          y: 2.0
+          z: 0.0
       - destStation: VillageDistrict
-        offset: [0.6,2.1,0.0]
+        offset:
+          x: 0.6
+          y: 2.1
+          z: 0.0
       - destStation: CliffDistrict
-        offset: [0.1,1.9,0.0]
+        offset:
+          x: 0.1
+          y: 1.9
+          z: 0.0
       - destStation: SlumDistrict
-        offset: [-0.9,2.3,0.0]
+        offset:
+          x: -0.9
+          y: 2.3
+          z: 0.0
       - destStation: DocksWest
-        offset: [-1.8,2.7,0.0]
+        offset:
+          x: -1.8
+          y: 2.7
+          z: 0.0
