refactor: bump idofront and use KeySerializer for okibo map font

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -89,3 +89,8 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    ProtocolBurrito:
+      required: false
+      load: BEFORE
+      join-classpath: true
+
