Add worldguard dependency, refactor depth meter system into separate files

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -25,6 +25,10 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    WorldGuard:
+      required: false
+      load: BEFORE
+      join-classpath: true
     DeeperWorld:
       required: false
       load: BEFORE
