--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -23,7 +23,8 @@ packy = { module = "com.mineinabyss:packy", version.ref = "packy" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
-minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.6.4"
+minecraft-plugin-hibiscuscommons = "me.lojosho:HibiscusCommons:0.2.3"
+minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.7.0-DEV"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.2"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.4"
