--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-gearyPaper = "0.29.0"
-guiy = "0.9.2"
-deeperworld = "0.9.1"
-chatty = "0.7.23"
-protocolburrito = "0.8.2"
-eternalfortune = "0.2.2"
-packy = "0.3.17"
-blocky = "0.8.17"
+gearyPaper = "0.29.11"
+guiy = "0.9.3"
+deeperworld = "0.10.0"
+chatty = "0.7.39"
+protocolburrito = "0.9.0"
+eternalfortune = "0.4-SNAPSHOT"
+packy = "0.3.20"
+blocky = "0.9.9"
 
 
 [libraries]
@@ -22,15 +22,15 @@ blocky = { module = "com.mineinabyss:blocky", version.ref = "blocky" }
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
 minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
 minecraft-plugin-hibiscuscommons = "me.lojosho:HibiscusCommons:0.2.3"
-minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.7.0-DEV"
-minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.26.2"
+minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.7.1"
+minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.27.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.4"
 minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:1.0.11-RELEASE"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
-minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.2-v2-SNAPSHOT"
-minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.20.2-v2-SNAPSHOT"
-minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.20.2-v2-SNAPSHOT"
-minecraft-plugin-openinv = "com.github.jikoo.OpenInv:openinvapi:4.4.0"
+minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.4-v3-SNAPSHOT"
+minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.20.4-v1-SNAPSHOT"
+minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.20.4-v1-SNAPSHOT"
+minecraft-plugin-openinv = "com.github.jikoo.OpenInv:openinvapi:4.4.2"
 minecraft-plugin-crazyadvancements = "eu.endercentral.crazy_advancements:CrazyAdvancementsAPI:2.1.15"
