--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: MineInAbyss/publish-action@develop
         with:
           maven-metadata-url: https://repo.mineinabyss.com/releases/com/mineinabyss/mineinabyss/maven-metadata.xml
-#          pages-path: build/dokka/htmlMultiModule/
-#          dokka: dokkaHtmlMultiModule
+          maven-snapshot-metadata-url: https://repo.mineinabyss.com/snapshots/com/mineinabyss/mineinabyss/maven-metadata.xml
           maven-username: ${{ secrets.MAVEN_USERNAME }}
           maven-password: ${{ secrets.MAVEN_PASSWORD }}
           release-files: |
