fix: add papi to plugin-deps

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -97,3 +97,7 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    PlaceholderAPI:
+      required: false
+      load: BEFORE
+      join-classpath: true
