--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,12 +1,11 @@
 [versions]
-gearyPaper = "0.30.1"
-guiy = "0.10.2"
+gearyPaper = "0.30.2"
+guiy = "0.12-dev"
 deeperworld = "0.11.0"
-chatty = "0.8.0"
-protocolburrito = "0.10.0"
+chatty = "0.8.1"
 eternalfortune = "0.4-SNAPSHOT"
 packy = "0.5.2"
-blocky = "0.9.13-dev.22"
+blocky = "0.10.0-dev.1"
 
 
 [libraries]
@@ -14,15 +13,13 @@ geary-papermc = { module = "com.mineinabyss:geary-papermc", version.ref = "geary
 deeperworld = { module = "com.mineinabyss:deeperworld", version.ref = "deeperworld" }
 guiy = { module = "com.mineinabyss:guiy-compose", version.ref = "guiy" }
 chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
-protocolburrito = { module = "com.mineinabyss:protocolburrito", version.ref = "protocolburrito" }
 
 eternalfortune = { module = "com.mineinabyss:eternalfortune", version.ref = "eternalfortune" }
 packy = { module = "com.mineinabyss:packy", version.ref = "packy" }
 blocky = { module = "com.mineinabyss:blocky", version.ref = "blocky" }
 
-minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.10.4-SNAPSHOT"
-minecraft-plugin-gsit = "com.github.Gecolay.GSit:core:1.4.10"
-minecraft-plugin-hibiscuscommons = "me.lojosho:HibiscusCommons:0.4.2"
+minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.12.2"
+minecraft-plugin-hibiscuscommons = "me.lojosho:HibiscusCommons:0.4.3"
 minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics-MiA:2.7.3"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.27.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
