--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 gearyPaper = "0.30.2"
-guiy = "0.12-dev"
+guiy = "0.12.1"
 deeperworld = "0.11.0"
-chatty = "0.8.1"
+chatty = "0.8.2"
 eternalfortune = "0.4-SNAPSHOT"
 packy = "0.5.2"
 blocky = "0.10.0-dev.1"
@@ -30,5 +30,4 @@ minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.4-v3-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.20.4-v1-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.20.4-v1-SNAPSHOT"
-minecraft-plugin-openinv = "com.github.jikoo.OpenInv:openinvapi:4.4.2"
 minecraft-plugin-crazyadvancements = "eu.endercentral.crazy_advancements:CrazyAdvancementsAPI:2.1.15"
