refactor: happyhud -> mythichud

--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -24,7 +24,7 @@ minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics-MiA:2.7.3"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.27.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.6"
-minecraft-plugin-happyhud = "com.ehhtan:HappyHUD:1.0.11-RELEASE"
+minecraft-plugin-mythichud = "io.lumine:MythicHUD:1.0.0-SNAPSHOT"
 #minecraft-plugin-hmcwraps = "de.skyslycer.hmcwraps:api:1.0.0"
 minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.17.1"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.20.4-v3-SNAPSHOT"
