--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -25,6 +25,7 @@ minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.27.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.6"
 minecraft-plugin-mythichud = "io.lumine:MythicHUD:1.0.0-SNAPSHOT"
+minecraft-plugin-betterhud = "com.github.toxicity188:BetterHud:1.0"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21-v1-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21-v1-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.21-v1-SNAPSHOT"
