--- a/gradle/miaLibs.versions.toml
+++ b/gradle/miaLibs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-gearyPaper = "0.30.10-dev.10"
+gearyPaper = "0.30.11"
 guiy = "0.12.1"
 deeperworld = "0.11.0"
 chatty = "0.8.6"
 eternalfortune = "0.4-SNAPSHOT"
-packy = "0.6.7"
+packy = "0.7.0"
 blocky = "0.10.2-dev.4"
 
 
@@ -24,7 +24,7 @@ minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.7.3-DEV"
 minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.27.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.6"
-minecraft-plugin-mythichud = "io.lumine:MythicHUD:1.0.0-SNAPSHOT"
+minecraft-plugin-mythichud = "io.lumine.mythichud:api:1.1.0-SNAPSHOT"
 minecraft-plugin-betterhud = "com.github.toxicity188:BetterHud:1.0"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21-v1-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21-v1-SNAPSHOT"
