refactor: bump ido and geary

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-gearyPaper = "0.30.23"
+gearyPaper = "0.31.0-dev.3"
 guiy = "0.12.4"
 deeperworld = "0.11.3"
 chatty = "0.8.9"
@@ -25,7 +25,6 @@ minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.28.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.6"
 minecraft-plugin-mythichud = "io.lumine.mythichud:api:1.1.0-SNAPSHOT"
-minecraft-plugin-betterhud = "com.github.toxicity188:BetterHud:1.0"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21-v1-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21-v1-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.21-v1-SNAPSHOT"
