--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-gearyPaper = "0.31.0-dev.3"
+gearyPaper = "0.31.0"
 guiy = "0.12.4"
-deeperworld = "0.11.3"
-chatty = "0.8.9"
+deeperworld = "0.11.9"
+chatty = "0.8.10"
 eternalfortune = "0.4-SNAPSHOT"
-packy = "0.7.2"
-blocky = "0.10.9"
+packy = "0.7.3"
+blocky = "0.10.14"
 
 
 [libraries]
