--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-gearyPaper = "0.31.8"
+gearyPaper = "0.32.0-dev.0"
 guiy = "0.12.5"
-deeperworld = "0.11.13"
-chatty = "0.8.10"
+deeperworld = "0.12.0-dev.0"
+chatty = "0.9.0-dev.1"
 eternalfortune = "0.4-SNAPSHOT"
-packy = "0.7.3"
-blocky = "0.10.15"
+packy = "0.8.0-dev.3"
+blocky = "0.11.0-dev.0"
 
 
 [libraries]
@@ -18,13 +18,13 @@ eternalfortune = { module = "com.mineinabyss:eternalfortune", version.ref = "ete
 packy = { module = "com.mineinabyss:packy", version.ref = "packy" }
 blocky = { module = "com.mineinabyss:blocky", version.ref = "blocky" }
 
-minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.12.2"
+minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.13"
 minecraft-plugin-hibiscuscommons = "me.lojosho:HibiscusCommons:0.6.2-e29bbc8d"
 minecraft-plugin-hmccosmetics = "com.hibiscusmc:HMCCosmetics:2.7.6-ea724998"
-minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.28.0"
+minecraft-plugin-discordsrv = "com.discordsrv:discordsrv:1.29.0"
 minecraft-plugin-luckperms = "net.luckperms:api:5.4"
 minecraft-plugin-placeholderapi = "me.clip:placeholderapi:2.11.6"
-minecraft-plugin-mythichud = "io.lumine.mythichud:api:1.1.0-SNAPSHOT"
-minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21-v1-SNAPSHOT"
-minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21-v1-SNAPSHOT"
-minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.21-v1-SNAPSHOT"
+minecraft-plugin-mythichud = "io.lumine.mythichud:api:1.2.2-SNAPSHOT"
+minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21.4-v1-SNAPSHOT"
+minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21.4-v1-SNAPSHOT"
+minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.21.4-v1-SNAPSHOT"
