feat: add Shopkeepers-hook to auto-update items

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,3 +28,4 @@ minecraft-plugin-mythichud = "io.lumine.mythichud:api:1.2.2-SNAPSHOT"
 minecraft-plugin-bkcommonlib = "com.bergerkiller.bukkit:BKCommonLib:1.21.4-v1-SNAPSHOT"
 minecraft-plugin-traincarts = "com.bergerkiller.bukkit:TrainCarts:1.21.4-v1-SNAPSHOT"
 minecraft-plugin-tccoasters = "com.bergerkiller.bukkit:TCCoasters:1.21.4-v1-SNAPSHOT"
+minecraft-plugin-shopkeepers = "com.nisovin.shopkeepers:ShopkeepersAPI:2.23.4"
