--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-gearyPaper = "0.32.0-dev.0"
+gearyPaper = "0.32.1"
 guiy = "0.12.5"
-deeperworld = "0.12.0-dev.0"
-chatty = "0.9.0-dev.1"
+deeperworld = "0.12.0"
+chatty = "0.9.0"
 eternalfortune = "0.4-SNAPSHOT"
-packy = "0.8.0-dev.3"
-blocky = "0.11.0-dev.0"
+packy = "0.8.0"
+blocky = "0.11.0"
 
 
 [libraries]
