--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ guiy = "0.12.5"
 deeperworld = "0.12.0"
 chatty = "0.9.0"
 packy = "0.8.0"
+emojy = "0.10.12"
 
 
 [libraries]
@@ -12,6 +13,7 @@ deeperworld = { module = "com.mineinabyss:deeperworld", version.ref = "deeperwor
 guiy = { module = "com.mineinabyss:guiy-compose", version.ref = "guiy" }
 chatty = { module = "com.mineinabyss:chatty-paper", version.ref = "chatty" }
 
+emojy = { module = "com.mineinabyss:emojy", version.ref = "emojy" }
 packy = { module = "com.mineinabyss:packy", version.ref = "packy" }
 
 minecraft-plugin-blocklocker = "nl.rutgerkok:blocklocker:1.13"
